# smartvmi

./: .editorconfig  CNAME  LICENSE  README.md
plugins/apitracing/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Readme.md  sonar-project.properties  vcpkg.json
plugins/apitracing/configuration/: configuration.yml
plugins/apitracing/configuration/functiondefinitions/: functionDefinitions.yaml
plugins/apitracing/src/: ApiTracing.cpp  CMakeLists.txt  Config.cpp  Config.h  Filenames.h  Readme.md  Tracer.cpp  Tracer.h
plugins/apitracing/src/lib/: ApiTracing.cpp  ApiTracing.h  CMakeLists.txt  Config.cpp  Config.h  ConstantDefinitions.h  Filenames.h  FunctionHook.cpp  FunctionHook.h  TracedProcess.cpp  TracedProcess.h  TracedProcessFactory.cpp  TracedProcessFactory.h  Tracer.cpp  Tracer.h
plugins/apitracing/test/: CMakeLists.txt  Config_UnitTest.cpp  Extractor_Unittest.cpp  FunctionDefinitions_UnitTest.cpp  FunctionHook_UnitTest.cpp  FunctionHook_Unittest.cpp  TestConstantDefinitions.h  TracedProcess_UnitTest.cpp  Tracer_UnitTest.cpp  Tracer_Unittest.cpp  Tracer_unittest.cpp  TracingTargetsParser_UnitTest.cpp  mock_Config.h  mock_Extractor.h  mock_FunctionDefinitions.h  mock_PluginInterface.h  mock_TracedProcess.h  mock_TracedProcessFactory.h  mock_TracingTargetsParser.h  testConfiguration.yaml  testFunctionDefinitions.yaml
plugins/apitracing/tools/: FunctionDefinitionsChecker.py
plugins/inmemoryscanner/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  conanfile.txt  sonar-project.properties  vcpkg.json
plugins/inmemoryscanner/src/: CMakeLists.txt  Common.h  Config.cpp  Config.h  Dumping.cpp  Dumping.h  Filenames.h  InMemory.cpp  OutputXML.cpp  OutputXML.h  Scanner.cpp  Scanner.h  Semaphore.h  Yara.cpp  Yara.h  YaraInterface.h
plugins/inmemoryscanner/src/lib/: CMakeLists.txt  Common.h  Config.cpp  Config.h  Dumping.cpp  Dumping.h  Filenames.h  IYaraInterface.h  InMemory.cpp  InMemory.h  OutputXML.cpp  OutputXML.h  Scanner.cpp  Scanner.h  Yara.cpp  Yara.h  YaraInterface.cpp  YaraInterface.h
plugins/inmemoryscanner/test/: CMakeLists.txt  FakeYara.cpp  FakeYara.h  FakeYaraInterface.cpp  FakeYaraInterface.h  Scanner_unittest.cpp  YaraInterface_unittest.cpp  YaraInterface_unitttest.cpp  mock_Config.h  mock_Dumping.h  mock_PluginInterface.h  mock_Yara.h  mock_YaraInterface.h
plugins/stringfinder/: .clang-tidy  CMakeLists.txt  CMakePresets.json  Readme.md
plugins/stringfinder/src/: CMakeLists.txt
plugins/stringfinder/src/lib/: CMakeLists.txt  Filenames.h  StringFinder.cpp  StringFinder.h
plugins/template/: CMakeLists.txt  Readme.md  conanfile.txt  vcpkg  vcpkg.json
plugins/template/src/: CMakeLists.txt
plugins/template/src/lib/: CMakeLists.txt  Filenames.h  Template.cpp  Template.h  TemplateCode.cpp  TemplateCode.h
plugins/template/test/: CMakeLists.txt  TemplateCode_unittest.cpp
vmicore/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  conanfile.txt  mappings.imp  sonar-project.properties  vcpkg  vcpkg-configuration.json  vcpkg.json
vmicore/configurations/: configuration.yml
vmicore/include/: CMakeLists.txt
vmicore/include/vmicore/: types.h
vmicore/include/vmicore/os/: ActiveProcessInformation.h  IMemoryRegionExtractor.h  IPageProtection.h  MemoryRegion.h
vmicore/include/vmicore/plugins/: IPluginConfig.h  PluginInit.h  PluginInterface.h
vmicore/include/vmicore/vmi/: IBreakpoint.h  IIntrospectionAPI.h
vmicore/rust_src/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
vmicore/rust_src/examples/: grpc_client.rs  grpc_logging_server.rs
vmicore/rust_src/src/: bridge.rs  console_logger.rs  grpc_log_service.rs  grpc_logger.rs  grpc_server.rs  grpc_vmi_service.rs  lib.rs  logging.rs  main.rs  unix_socket.rs
vmicore/src/: CMakeLists.txt  Cmdline.cpp  Cmdline.h  Convenience.h  GlobalControl.cpp  GlobalControl.h  VmiHub.cpp  VmiHub.h  config.h.in  main.cpp
vmicore/src/config/: ConfigYAMLParser.cpp  ConfigYAMLParser.h  IConfigParser.h  PluginConfig.cpp  PluginConfig.h
vmicore/src/include/: CMakeLists.txt
vmicore/src/include/vmicore/: filename.h
vmicore/src/io/: IEventStream.h  IFileTransport.h  ILogger.h  ILogging.h
vmicore/src/io/console/: ConsoleLogger.cpp  ConsoleLogger.h  ConsoleLoggerBuilder.cpp  ConsoleLoggerBuilder.h  DummyEventStream.h
vmicore/src/io/file/: LegacyLogging.cpp  LegacyLogging.h
vmicore/src/io/grpc/: GRPCLogger.cpp  GRPCLogger.h  GRPCServer.cpp  GRPCServer.h
vmicore/src/lib/: CMakeLists.txt  GlobalControl.cpp  GlobalControl.h  VmiHub.cpp  VmiHub.h
vmicore/src/lib/config/: ConfigYAMLParser.cpp  ConfigYAMLParser.h  (+3 more)
vmicore/src/offsets/: OffsetDefinitions.h
vmicore/src/os/: ActiveProcessInformation.h  CMakeLists.txt  IActiveProcessesSupervisor.h  ISystemEventSupervisor.h  MemoryRegion.h  OperatingSystem.h  PageProtection.cpp  PageProtection.h  PagingDefinitions.h  SystemEvent.h
vmicore/src/plugins/: IPluginConfig.h  PluginInterface.h  PluginSystem.cpp  PluginSystem.h
vmicore/src/vmi/: Breakpoint.cpp  Event.h  InterruptEvent.cpp  InterruptEvent.h  InterruptEventSupervisor.cpp  InterruptEventSupervisor.h  InterruptFactory.cpp  InterruptFactory.h  InterruptGuard.cpp  InterruptGuard.h  LibvmiInterface.cpp  LibvmiInterface.h  SingleStepSupervisor.cpp  SingleStepSupervisor.h  VmiException.h  VmiInitData.cpp  VmiInitData.h  VmiInitError.cpp  VmiInitError.h  VmiUnicodeStruct.cpp  VmiUnicodeStruct.h
vmicore/test/: .clang-tidy  CMakeLists.txt
vmicore/test/config/: mock_ConfigInterface.h
vmicore/test/include/: CMakeLists.txt
vmicore/test/io/: mock_EventStream.h  mock_Logging.h
vmicore/test/mocks/: CMakeLists.txt  MockAggregator.cpp
vmicore/test/plugins/: PluginSystem_UnitTest.cpp  mock_PluginSystem.h
vmicore/test/public/: CMakeLists.txt
vmicore/test/vmi/: InterruptEventSupervisor_UnitTest.cpp  InterruptEvent_UnitTest.cpp  LibvmiInterface_UnitTest.cpp  ProcessesMemoryState.h  SingleStepSupervisor_UnitTest.cpp  mock_InterruptEventSupervisor.h  mock_InterruptFactory.h  mock_LibvmiInterface.h  mock_SingleStepSupervisor.h
(+215 files in other folders)
