[package]
name = "rust_grpc_server"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "rust_grpc_server"
path = "src/main.rs"

[dependencies]
tonic = "0.8.2"
prost = "0.11.2"
prost-types = "0.11.2"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread", "net"] }
cxx = "1.0"
triggered = "0.1.2"
async-std = "1.12"
async-stream = "0.3.3"
futures-core = "0.3.25"
chrono = "0.4.23"
thiserror = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = "0.8.2"
cxx-build = "1.0"
