[package]
name = "rust_grpc_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread", "net"] }
cxx = "1.0"
triggered = "0.1.2"
async-std = "1.12"
async-stream = "0.3.3"
futures-core = "0.3.25"
chrono = "0.4.23"
thiserror = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
tower = "0.4.13"
ctrlc = "3.4.0"

[build-dependencies]
tonic-build = "0.11.0"
