[package]
name = "rust_grpc_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1.16"
hyper-util = "0.1.10"
cxx = "1.0"
triggered = "0.1.2"
async-std = "1.13"
async-stream = "0.3.6"
futures-core = "0.3.31"
chrono = "0.4.38"
thiserror = "1"

[dev-dependencies]
tower = "0.5.1"
ctrlc = "3.4.5"

[build-dependencies]
tonic-build = "0.12.3"
